Formatage automatique du code HTML

--- a/projects/shuno.html
+++ b/projects/shuno.html
@@ -59,24 +59,28 @@
     </nav>
 
     <!-- Hero Section -->
-    <section class="pt-24 pb-12 bg-gradient-to-br from-slate-900 via-slate-800 to-cyan-900">
+    <section
+      class="pt-24 pb-12 bg-gradient-to-br from-slate-900 via-slate-800 to-cyan-900"
+    >
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="text-center mb-8">
-          <div class="inline-block p-4 bg-gradient-to-br from-gray-900 via-cyan-900 to-gray-800 rounded-2xl mb-6">
+          <div
+            class="inline-block p-4 bg-gradient-to-br from-gray-900 via-cyan-900 to-gray-800 rounded-2xl mb-6"
+          >
             <img
               src="../images/shuno-logo.svg"
               alt="Logo Shu-no"
               class="w-32 h-32"
             />
           </div>
-          <h1 class="text-4xl md:text-5xl font-bold text-white mb-4">
-            Shu-no
-          </h1>
+          <h1 class="text-4xl md:text-5xl font-bold text-white mb-4">Shu-no</h1>
           <p class="text-xl text-gray-300 mb-6">
             Plateforme de Réservation de Gîtes en Bretagne
           </p>
           <div class="flex flex-wrap justify-center gap-3">
-            <span class="px-4 py-2 bg-yellow-500/90 text-gray-900 rounded-xl font-semibold">
+            <span
+              class="px-4 py-2 bg-yellow-500/90 text-gray-900 rounded-xl font-semibold"
+            >
               <i class="fas fa-code mr-2"></i>En développement actif
             </span>
             <span class="px-4 py-2 bg-gray-700 text-white rounded-xl">
@@ -97,19 +101,27 @@
           </h2>
           <div class="prose prose-lg max-w-none">
             <p class="text-gray-700 leading-relaxed mb-4">
-              Shu-no est une plateforme complète de gestion de réservations de gîtes offrant une expérience utilisateur moderne et intuitive 
-              pour découvrir, réserver et gérer des hébergements touristiques sur la Côte de Goëlo en Bretagne. 
-              Ce projet a été développé dans le cadre de mon stage professionnel DWWM (Développeur Web et Web Mobile) à l'AFPA de Brest.
+              Shu-no est une plateforme complète de gestion de réservations de
+              gîtes offrant une expérience utilisateur moderne et intuitive pour
+              découvrir, réserver et gérer des hébergements touristiques sur la
+              Côte de Goëlo en Bretagne. Ce projet a été développé dans le cadre
+              de mon stage professionnel DWWM (Développeur Web et Web Mobile) à
+              l'AFPA de Brest.
             </p>
             <p class="text-gray-700 leading-relaxed mb-4">
-              L'application utilise une architecture full-stack moderne avec TypeScript côté frontend (React 18) et backend (Node.js/Express), 
-              garantissant une base de code robuste et maintenable. Une attention particulière a été portée aux performances, 
-              à l'accessibilité et à la sécurité tout au long du développement.
+              L'application utilise une architecture full-stack moderne avec
+              TypeScript côté frontend (React 18) et backend (Node.js/Express),
+              garantissant une base de code robuste et maintenable. Une
+              attention particulière a été portée aux performances, à
+              l'accessibilité et à la sécurité tout au long du développement.
             </p>
             <p class="text-gray-700 leading-relaxed">
-              Développé selon la méthodologie Agile sur 10 semaines (5 sprints de 2 semaines) dans le cadre de mon stage DWWM, 
-              le projet continue d'évoluer avec l'ajout de nouvelles fonctionnalités et l'amélioration continue de l'expérience utilisateur. 
-              L'infrastructure de déploiement a été mise en place pour la soutenance de stage, et le projet est actuellement en phase 
+              Développé selon la méthodologie Agile sur 10 semaines (5 sprints
+              de 2 semaines) dans le cadre de mon stage DWWM, le projet continue
+              d'évoluer avec l'ajout de nouvelles fonctionnalités et
+              l'amélioration continue de l'expérience utilisateur.
+              L'infrastructure de déploiement a été mise en place pour la
+              soutenance de stage, et le projet est actuellement en phase
               d'amélioration et d'ajout de fonctionnalités avancées.
             </p>
           </div>
@@ -123,34 +135,77 @@
           <div class="grid md:grid-cols-2 gap-6">
             <!-- Frontend -->
             <div class="bg-white p-6 rounded-xl shadow-md">
-              <h3 class="text-xl font-bold text-gray-900 mb-4 flex items-center">
+              <h3
+                class="text-xl font-bold text-gray-900 mb-4 flex items-center"
+              >
                 <i class="fas fa-laptop-code text-gray-600 mr-3"></i>
                 Frontend
               </h3>
               <div class="flex flex-wrap gap-2">
-                <span class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm">React 18</span>
-                <span class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm">TypeScript</span>
-                <span class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm">Vite</span>
-                <span class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm">Tailwind CSS</span>
-                <span class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm">React Router 6</span>
-                <span class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm">React Query</span>
-                <span class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm">Radix UI</span>
+                <span
+                  class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm"
+                  >React 18</span
+                >
+                <span
+                  class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm"
+                  >TypeScript</span
+                >
+                <span
+                  class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm"
+                  >Vite</span
+                >
+                <span
+                  class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm"
+                  >Tailwind CSS</span
+                >
+                <span
+                  class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm"
+                  >React Router 6</span
+                >
+                <span
+                  class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm"
+                  >React Query</span
+                >
+                <span
+                  class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm"
+                  >Radix UI</span
+                >
               </div>
             </div>
 
             <!-- Backend -->
             <div class="bg-white p-6 rounded-xl shadow-md">
-              <h3 class="text-xl font-bold text-gray-900 mb-4 flex items-center">
+              <h3
+                class="text-xl font-bold text-gray-900 mb-4 flex items-center"
+              >
                 <i class="fas fa-server text-gray-600 mr-3"></i>
                 Backend
               </h3>
               <div class="flex flex-wrap gap-2">
-                <span class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm">Node.js</span>
-                <span class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm">Express</span>
-                <span class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm">TypeScript</span>
-                <span class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm">TypeORM</span>
-                <span class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm">PostgreSQL</span>
-                <span class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm">JWT</span>
+                <span
+                  class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm"
+                  >Node.js</span
+                >
+                <span
+                  class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm"
+                  >Express</span
+                >
+                <span
+                  class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm"
+                  >TypeScript</span
+                >
+                <span
+                  class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm"
+                  >TypeORM</span
+                >
+                <span
+                  class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm"
+                  >PostgreSQL</span
+                >
+                <span
+                  class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm"
+                  >JWT</span
+                >
               </div>
             </div>
           </div>
@@ -164,74 +219,92 @@
           <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6 mb-6">
             <!-- Première grille (6 cartes en 3 colonnes) -->
             <div class="bg-white p-6 rounded-xl shadow-md">
-              <div class="w-12 h-12 bg-gray-200 rounded-lg flex items-center justify-center mb-4">
+              <div
+                class="w-12 h-12 bg-gray-200 rounded-lg flex items-center justify-center mb-4"
+              >
                 <i class="fas fa-calendar-check text-gray-700 text-xl"></i>
               </div>
               <h3 class="text-lg font-bold text-gray-900 mb-2">
                 Réservation en temps réel
               </h3>
               <p class="text-gray-600 text-sm">
-                Système de réservation avec calendrier interactif et disponibilité instantanée
+                Système de réservation avec calendrier interactif et
+                disponibilité instantanée
               </p>
             </div>
 
             <div class="bg-white p-6 rounded-xl shadow-md">
-              <div class="w-12 h-12 bg-gray-200 rounded-lg flex items-center justify-center mb-4">
+              <div
+                class="w-12 h-12 bg-gray-200 rounded-lg flex items-center justify-center mb-4"
+              >
                 <i class="fas fa-search text-gray-700 text-xl"></i>
               </div>
               <h3 class="text-lg font-bold text-gray-900 mb-2">
                 Recherche avancée
               </h3>
               <p class="text-gray-600 text-sm">
-                Filtres par dates, nombre de personnes, et localisation avec résultats instantanés
+                Filtres par dates, nombre de personnes, et localisation avec
+                résultats instantanés
               </p>
             </div>
 
             <div class="bg-white p-6 rounded-xl shadow-md">
-              <div class="w-12 h-12 bg-gray-200 rounded-lg flex items-center justify-center mb-4">
+              <div
+                class="w-12 h-12 bg-gray-200 rounded-lg flex items-center justify-center mb-4"
+              >
                 <i class="fas fa-chart-line text-gray-700 text-xl"></i>
               </div>
               <h3 class="text-lg font-bold text-gray-900 mb-2">
                 Dashboard analytique
               </h3>
               <p class="text-gray-600 text-sm">
-                Statistiques complètes et graphiques en temps réel pour les administrateurs
+                Statistiques complètes et graphiques en temps réel pour les
+                administrateurs
               </p>
             </div>
 
             <div class="bg-white p-6 rounded-xl shadow-md">
-              <div class="w-12 h-12 bg-gray-200 rounded-lg flex items-center justify-center mb-4">
+              <div
+                class="w-12 h-12 bg-gray-200 rounded-lg flex items-center justify-center mb-4"
+              >
                 <i class="fas fa-euro-sign text-gray-700 text-xl"></i>
               </div>
               <h3 class="text-lg font-bold text-gray-900 mb-2">
                 Tarification dynamique
               </h3>
               <p class="text-gray-600 text-sm">
-                Gestion des périodes et tarifs saisonniers avec calcul automatique
+                Gestion des périodes et tarifs saisonniers avec calcul
+                automatique
               </p>
             </div>
 
             <div class="bg-white p-6 rounded-xl shadow-md">
-              <div class="w-12 h-12 bg-gray-200 rounded-lg flex items-center justify-center mb-4">
+              <div
+                class="w-12 h-12 bg-gray-200 rounded-lg flex items-center justify-center mb-4"
+              >
                 <i class="fas fa-home text-gray-700 text-xl"></i>
               </div>
               <h3 class="text-lg font-bold text-gray-900 mb-2">
                 Gestion des propriétés
               </h3>
               <p class="text-gray-600 text-sm">
-                CRUD complet sur les gîtes avec galerie photos et descriptions détaillées
+                CRUD complet sur les gîtes avec galerie photos et descriptions
+                détaillées
               </p>
             </div>
 
             <div class="bg-white p-6 rounded-xl shadow-md">
-              <div class="w-12 h-12 bg-gray-200 rounded-lg flex items-center justify-center mb-4">
+              <div
+                class="w-12 h-12 bg-gray-200 rounded-lg flex items-center justify-center mb-4"
+              >
                 <i class="fas fa-user-shield text-gray-700 text-xl"></i>
               </div>
               <h3 class="text-lg font-bold text-gray-900 mb-2">
                 Authentification JWT
               </h3>
               <p class="text-gray-600 text-sm">
-                Système de sécurité robuste avec JWT et gestion des rôles utilisateurs
+                Système de sécurité robuste avec JWT et gestion des rôles
+                utilisateurs
               </p>
             </div>
           </div>
@@ -239,38 +312,47 @@
           <!-- Deuxième grille (2 cartes centrées) -->
           <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
             <div class="bg-white p-6 rounded-xl shadow-md">
-              <div class="w-12 h-12 bg-gray-200 rounded-lg flex items-center justify-center mb-4">
+              <div
+                class="w-12 h-12 bg-gray-200 rounded-lg flex items-center justify-center mb-4"
+              >
                 <i class="fas fa-mobile-alt text-gray-700 text-xl"></i>
               </div>
               <h3 class="text-lg font-bold text-gray-900 mb-2">
                 Design responsive
               </h3>
               <p class="text-gray-600 text-sm">
-                Interface adaptative pour une expérience optimale sur tous les appareils
+                Interface adaptative pour une expérience optimale sur tous les
+                appareils
               </p>
             </div>
 
             <div class="bg-white p-6 rounded-xl shadow-md">
-              <div class="w-12 h-12 bg-gray-200 rounded-lg flex items-center justify-center mb-4">
+              <div
+                class="w-12 h-12 bg-gray-200 rounded-lg flex items-center justify-center mb-4"
+              >
                 <i class="fas fa-rocket text-gray-700 text-xl"></i>
               </div>
               <h3 class="text-lg font-bold text-gray-900 mb-2">
                 Performances optimisées
               </h3>
               <p class="text-gray-600 text-sm">
-                Optimisation du temps de chargement et de la réactivité de l'interface
+                Optimisation du temps de chargement et de la réactivité de
+                l'interface
               </p>
             </div>
 
             <div class="bg-white p-6 rounded-xl shadow-md">
-              <div class="w-12 h-12 bg-gray-200 rounded-lg flex items-center justify-center mb-4">
+              <div
+                class="w-12 h-12 bg-gray-200 rounded-lg flex items-center justify-center mb-4"
+              >
                 <i class="fas fa-universal-access text-gray-700 text-xl"></i>
               </div>
               <h3 class="text-lg font-bold text-gray-900 mb-2">
                 Accessibilité
               </h3>
               <p class="text-gray-600 text-sm">
-                Respect des normes d'accessibilité pour une utilisation inclusive
+                Respect des normes d'accessibilité pour une utilisation
+                inclusive
               </p>
             </div>
           </div>
@@ -344,18 +426,33 @@
           </div>
           <p class="text-sm text-gray-500 mt-4 italic">
             <i class="fas fa-info-circle mr-1"></i>
-            Projet en développement actif - Le déploiement en production interviendra après finalisation des fonctionnalités avancées
+            Projet en développement actif - Le déploiement en production
+            interviendra après finalisation des fonctionnalités avancées
           </p>
         </section>
       </div>
     </main>
 
     <!-- Lightbox pour les images -->
-    <div id="lightbox" class="fixed inset-0 bg-black bg-opacity-90 z-50 hidden flex items-center justify-center p-4" onclick="closeLightbox()">
-      <button class="absolute top-4 right-4 text-white text-4xl hover:text-gray-300 transition-colors" onclick="closeLightbox()" aria-label="Fermer">
+    <div
+      id="lightbox"
+      class="fixed inset-0 bg-black bg-opacity-90 z-50 hidden flex items-center justify-center p-4"
+      onclick="closeLightbox()"
+    >
+      <button
+        class="absolute top-4 right-4 text-white text-4xl hover:text-gray-300 transition-colors"
+        onclick="closeLightbox()"
+        aria-label="Fermer"
+      >
         <i class="fas fa-times"></i>
       </button>
-      <img id="lightbox-img" src="" alt="" class="max-w-full max-h-full rounded-lg shadow-2xl" onclick="event.stopPropagation()">
+      <img
+        id="lightbox-img"
+        src=""
+        alt=""
+        class="max-w-full max-h-full rounded-lg shadow-2xl"
+        onclick="event.stopPropagation()"
+      />
     </div>
 
     <!-- Footer -->
@@ -372,25 +469,25 @@
     <script>
       // Lightbox
       function openLightbox(src, alt) {
-        const lightbox = document.getElementById('lightbox');
-        const lightboxImg = document.getElementById('lightbox-img');
+        const lightbox = document.getElementById("lightbox");
+        const lightboxImg = document.getElementById("lightbox-img");
         lightboxImg.src = src;
         lightboxImg.alt = alt;
-        lightbox.classList.remove('hidden');
-        lightbox.classList.add('flex');
-        document.body.style.overflow = 'hidden';
+        lightbox.classList.remove("hidden");
+        lightbox.classList.add("flex");
+        document.body.style.overflow = "hidden";
       }
 
       function closeLightbox() {
-        const lightbox = document.getElementById('lightbox');
-        lightbox.classList.add('hidden');
-        lightbox.classList.remove('flex');
-        document.body.style.overflow = 'auto';
+        const lightbox = document.getElementById("lightbox");
+        lightbox.classList.add("hidden");
+        lightbox.classList.remove("flex");
+        document.body.style.overflow = "auto";
       }
 
       // Fermer avec la touche Échap
-      document.addEventListener('keydown', function(e) {
-        if (e.key === 'Escape') {
+      document.addEventListener("keydown", function (e) {
+        if (e.key === "Escape") {
           closeLightbox();
         }
       });
