--- a/projects/zetoupanda.html
+++ b/projects/zetoupanda.html
@@ -59,10 +59,14 @@
     </nav>
 
     <!-- Hero Section -->
-    <section class="pt-24 pb-12 bg-gradient-to-br from-slate-900 via-slate-800 to-slate-900">
+    <section
+      class="pt-24 pb-12 bg-gradient-to-br from-slate-900 via-slate-800 to-slate-900"
+    >
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="text-center mb-8">
-          <div class="inline-block p-4 bg-gradient-to-br from-gray-900 via-gray-800 to-green-900 rounded-2xl mb-6">
+          <div
+            class="inline-block p-4 bg-gradient-to-br from-gray-900 via-gray-800 to-green-900 rounded-2xl mb-6"
+          >
             <img
               src="../images/zetoupanda-logo.svg"
               alt="Logo ZetouPanda"
@@ -76,7 +80,9 @@
             Application E-commerce Full-Stack
           </p>
           <div class="flex flex-wrap justify-center gap-3">
-            <span class="px-4 py-2 bg-yellow-500/90 text-gray-900 rounded-xl font-semibold">
+            <span
+              class="px-4 py-2 bg-yellow-500/90 text-gray-900 rounded-xl font-semibold"
+            >
               <i class="fas fa-code mr-2"></i>En développement
             </span>
             <span class="px-4 py-2 bg-gray-700 text-white rounded-xl">
@@ -97,12 +103,16 @@
           </h2>
           <div class="prose prose-lg max-w-none">
             <p class="text-gray-700 leading-relaxed mb-4">
-              ZetouPanda est une application e-commerce complète développée dans le cadre de ma formation de développeur web full-stack. 
-              Ce projet personnel ambitieux combine une interface utilisateur moderne avec un système de gestion complet côté administrateur.
+              ZetouPanda est une application e-commerce complète développée dans
+              le cadre de ma formation de développeur web full-stack. Ce projet
+              personnel ambitieux combine une interface utilisateur moderne avec
+              un système de gestion complet côté administrateur.
             </p>
             <p class="text-gray-700 leading-relaxed">
-              L'application permet aux utilisateurs de parcourir un catalogue de produits, de gérer leur panier et de passer des commandes, 
-              tandis que l'interface d'administration offre une gestion complète des produits, des commandes et des utilisateurs.
+              L'application permet aux utilisateurs de parcourir un catalogue de
+              produits, de gérer leur panier et de passer des commandes, tandis
+              que l'interface d'administration offre une gestion complète des
+              produits, des commandes et des utilisateurs.
             </p>
           </div>
         </section>
@@ -115,31 +125,65 @@
           <div class="grid md:grid-cols-2 gap-6">
             <!-- Frontend -->
             <div class="bg-white p-6 rounded-xl shadow-md">
-              <h3 class="text-xl font-bold text-gray-900 mb-4 flex items-center">
+              <h3
+                class="text-xl font-bold text-gray-900 mb-4 flex items-center"
+              >
                 <i class="fas fa-laptop-code text-gray-600 mr-3"></i>
                 Frontend
               </h3>
               <div class="flex flex-wrap gap-2">
-                <span class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm">React.js</span>
-                <span class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm">TypeScript</span>
-                <span class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm">Tailwind CSS</span>
-                <span class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm">React Router</span>
-                <span class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm">Context API</span>
+                <span
+                  class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm"
+                  >React.js</span
+                >
+                <span
+                  class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm"
+                  >TypeScript</span
+                >
+                <span
+                  class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm"
+                  >Tailwind CSS</span
+                >
+                <span
+                  class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm"
+                  >React Router</span
+                >
+                <span
+                  class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm"
+                  >Context API</span
+                >
               </div>
             </div>
 
             <!-- Backend -->
             <div class="bg-white p-6 rounded-xl shadow-md">
-              <h3 class="text-xl font-bold text-gray-900 mb-4 flex items-center">
+              <h3
+                class="text-xl font-bold text-gray-900 mb-4 flex items-center"
+              >
                 <i class="fas fa-server text-gray-600 mr-3"></i>
                 Backend
               </h3>
               <div class="flex flex-wrap gap-2">
-                <span class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm">Node.js</span>
-                <span class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm">Express</span>
-                <span class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm">MySQL</span>
-                <span class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm">JWT</span>
-                <span class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm">Bcrypt</span>
+                <span
+                  class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm"
+                  >Node.js</span
+                >
+                <span
+                  class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm"
+                  >Express</span
+                >
+                <span
+                  class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm"
+                  >MySQL</span
+                >
+                <span
+                  class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm"
+                  >JWT</span
+                >
+                <span
+                  class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm"
+                  >Bcrypt</span
+                >
               </div>
             </div>
           </div>
@@ -152,19 +196,24 @@
           </h2>
           <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
             <div class="bg-white p-6 rounded-xl shadow-md">
-              <div class="w-12 h-12 bg-gray-200 rounded-lg flex items-center justify-center mb-4">
+              <div
+                class="w-12 h-12 bg-gray-200 rounded-lg flex items-center justify-center mb-4"
+              >
                 <i class="fas fa-shopping-cart text-gray-700 text-xl"></i>
               </div>
               <h3 class="text-lg font-bold text-gray-900 mb-2">
                 Gestion du panier
               </h3>
               <p class="text-gray-600 text-sm">
-                Ajout, modification et suppression de produits avec calcul automatique du total
+                Ajout, modification et suppression de produits avec calcul
+                automatique du total
               </p>
             </div>
 
             <div class="bg-white p-6 rounded-xl shadow-md">
-              <div class="w-12 h-12 bg-gray-200 rounded-lg flex items-center justify-center mb-4">
+              <div
+                class="w-12 h-12 bg-gray-200 rounded-lg flex items-center justify-center mb-4"
+              >
                 <i class="fas fa-user-shield text-gray-700 text-xl"></i>
               </div>
               <h3 class="text-lg font-bold text-gray-900 mb-2">
@@ -176,7 +225,9 @@
             </div>
 
             <div class="bg-white p-6 rounded-xl shadow-md">
-              <div class="w-12 h-12 bg-gray-200 rounded-lg flex items-center justify-center mb-4">
+              <div
+                class="w-12 h-12 bg-gray-200 rounded-lg flex items-center justify-center mb-4"
+              >
                 <i class="fas fa-box text-gray-700 text-xl"></i>
               </div>
               <h3 class="text-lg font-bold text-gray-900 mb-2">
@@ -188,7 +239,9 @@
             </div>
 
             <div class="bg-white p-6 rounded-xl shadow-md">
-              <div class="w-12 h-12 bg-gray-200 rounded-lg flex items-center justify-center mb-4">
+              <div
+                class="w-12 h-12 bg-gray-200 rounded-lg flex items-center justify-center mb-4"
+              >
                 <i class="fas fa-credit-card text-gray-700 text-xl"></i>
               </div>
               <h3 class="text-lg font-bold text-gray-900 mb-2">
@@ -200,26 +253,29 @@
             </div>
 
             <div class="bg-white p-6 rounded-xl shadow-md">
-              <div class="w-12 h-12 bg-gray-200 rounded-lg flex items-center justify-center mb-4">
+              <div
+                class="w-12 h-12 bg-gray-200 rounded-lg flex items-center justify-center mb-4"
+              >
                 <i class="fas fa-tachometer-alt text-gray-700 text-xl"></i>
               </div>
-              <h3 class="text-lg font-bold text-gray-900 mb-2">
-                Panel Admin
-              </h3>
+              <h3 class="text-lg font-bold text-gray-900 mb-2">Panel Admin</h3>
               <p class="text-gray-600 text-sm">
                 Interface d'administration complète pour gérer le site
               </p>
             </div>
 
             <div class="bg-white p-6 rounded-xl shadow-md">
-              <div class="w-12 h-12 bg-gray-200 rounded-lg flex items-center justify-center mb-4">
+              <div
+                class="w-12 h-12 bg-gray-200 rounded-lg flex items-center justify-center mb-4"
+              >
                 <i class="fas fa-mobile-alt text-gray-700 text-xl"></i>
               </div>
               <h3 class="text-lg font-bold text-gray-900 mb-2">
                 Responsive Design
               </h3>
               <p class="text-gray-600 text-sm">
-                Interface adaptée à tous les appareils (mobile, tablette, desktop)
+                Interface adaptée à tous les appareils (mobile, tablette,
+                desktop)
               </p>
             </div>
           </div>
@@ -296,11 +352,25 @@
     </main>
 
     <!-- Lightbox pour les images -->
-    <div id="lightbox" class="fixed inset-0 bg-black bg-opacity-90 z-50 hidden flex items-center justify-center p-4" onclick="closeLightbox()">
-      <button class="absolute top-4 right-4 text-white text-4xl hover:text-gray-300 transition-colors" onclick="closeLightbox()" aria-label="Fermer">
+    <div
+      id="lightbox"
+      class="fixed inset-0 bg-black bg-opacity-90 z-50 hidden flex items-center justify-center p-4"
+      onclick="closeLightbox()"
+    >
+      <button
+        class="absolute top-4 right-4 text-white text-4xl hover:text-gray-300 transition-colors"
+        onclick="closeLightbox()"
+        aria-label="Fermer"
+      >
         <i class="fas fa-times"></i>
       </button>
-      <img id="lightbox-img" src="" alt="" class="max-w-full max-h-full rounded-lg shadow-2xl" onclick="event.stopPropagation()">
+      <img
+        id="lightbox-img"
+        src=""
+        alt=""
+        class="max-w-full max-h-full rounded-lg shadow-2xl"
+        onclick="event.stopPropagation()"
+      />
     </div>
 
     <!-- Footer -->
@@ -317,25 +387,25 @@
     <script>
       // Lightbox
       function openLightbox(src, alt) {
-        const lightbox = document.getElementById('lightbox');
-        const lightboxImg = document.getElementById('lightbox-img');
+        const lightbox = document.getElementById("lightbox");
+        const lightboxImg = document.getElementById("lightbox-img");
         lightboxImg.src = src;
         lightboxImg.alt = alt;
-        lightbox.classList.remove('hidden');
-        lightbox.classList.add('flex');
-        document.body.style.overflow = 'hidden';
+        lightbox.classList.remove("hidden");
+        lightbox.classList.add("flex");
+        document.body.style.overflow = "hidden";
       }
 
       function closeLightbox() {
-        const lightbox = document.getElementById('lightbox');
-        lightbox.classList.add('hidden');
-        lightbox.classList.remove('flex');
-        document.body.style.overflow = 'auto';
+        const lightbox = document.getElementById("lightbox");
+        lightbox.classList.add("hidden");
+        lightbox.classList.remove("flex");
+        document.body.style.overflow = "auto";
       }
 
       // Fermer avec la touche Échap
-      document.addEventListener('keydown', function(e) {
-        if (e.key === 'Escape') {
+      document.addEventListener("keydown", function (e) {
+        if (e.key === "Escape") {
           closeLightbox();
         }
       });
