--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Portfolio professionnel d'Aurélien Thébault - Développeur Web Full-Stack spécialisé en React, Node.js et applications web modernes"
+      content="Portfolio professionnel d'Aurélien Thébault, Développeur Web Full-Stack à Mayenne. Spécialisé en React, Node.js, TypeScript et création d'applications web modernes. Découvrez mes projets e-commerce, plateformes de réservation et sites vitrines."
     />
     <meta name="author" content="Aurélien Thébault" />
     <meta
       name="keywords"
-      content="Aurélien Thébault, développeur web, full-stack, React, Node.js, JavaScript, TypeScript, portfolio développeur, développeur web Mayenne, développeur React, développeur Node.js, création site web, application web"
+      content="Aurélien Thébault, développeur web, développeur full-stack, React, Node.js, JavaScript, TypeScript, MongoDB, Express.js, PostgreSQL, Tailwind CSS, portfolio développeur, développeur web Mayenne, développeur React Mayenne, développeur freelance, création site web, application web, e-commerce, plateforme réservation, développeur front-end, développeur back-end, API REST, développement web moderne"
     />
 
     <!-- Canonical URL -->
@@ -57,10 +57,18 @@
     />
     <meta name="twitter:image:alt" content="Photo de profil d'Aurélien Thébault" />
 
-    <!-- Icône de favori -->
+    <!-- Icônes de favori -->
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="apple-touch-icon" href="images/profile-photo.jpg" />
 
-    <title>Aurélien Thébault - Développeur Web Full-Stack</title>
+    <!-- Manifest PWA -->
+    <link rel="manifest" href="manifest.json" />
+
+    <!-- Humans.txt -->
+    <link rel="author" href="humans.txt" />
+
+    <title>Aurélien Thébault - Développeur Web Full-Stack | Portfolio Professionnel</title>
 
     <!-- CDN Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
