--- a/projects/portfolio.html
+++ b/projects/portfolio.html
@@ -31,10 +31,17 @@
     <meta name="twitter:description" content="Site portfolio développé avec HTML, CSS et JavaScript" />
     <meta name="twitter:image" content="https://aurel1407.github.io/portfolio/images/profile-photo.jpg" />
 
-    <title>Portfolio Professionnel | Aurélien Thébault</title>
+    <title>Portfolio Professionnel | Site Vitrine HTML5, Tailwind CSS | Aurélien Thébault</title>
 
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="../favicon.svg" />
+    <link rel="icon" type="image/x-icon" href="../favicon.ico" />
+
+    <!-- Manifest PWA -->
+    <link rel="manifest" href="../manifest.json" />
+
+    <!-- Humans.txt -->
+    <link rel="author" href="../humans.txt" />
 
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -74,6 +81,34 @@
         },
         "programmingLanguage": ["HTML5", "CSS3", "JavaScript", "Tailwind CSS"],
         "datePublished": "2024"
+      }
+    </script>
+
+    <!-- Breadcrumb Schema -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+          {
+            "@type": "ListItem",
+            "position": 1,
+            "name": "Accueil",
+            "item": "https://aurel1407.github.io/portfolio/"
+          },
+          {
+            "@type": "ListItem",
+            "position": 2,
+            "name": "Projets",
+            "item": "https://aurel1407.github.io/portfolio/#projects"
+          },
+          {
+            "@type": "ListItem",
+            "position": 3,
+            "name": "Portfolio",
+            "item": "https://aurel1407.github.io/portfolio/projects/portfolio.html"
+          }
+        ]
       }
     </script>
   </head>
