--- a/projects/shuno.html
+++ b/projects/shuno.html
@@ -31,10 +31,17 @@
     <meta name="twitter:description" content="Plateforme de réservation de gîtes développée en React et Node.js" />
     <meta name="twitter:image" content="https://aurel1407.github.io/portfolio/images/shuno-logo.svg" />
 
-    <title>Shu-no - Plateforme de Réservation | Aurélien Thébault</title>
+    <title>Shu-no | Plateforme Réservation React, Node.js, PostgreSQL | Aurélien Thébault</title>
 
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="../favicon.svg" />
+    <link rel="icon" type="image/x-icon" href="../favicon.ico" />
+
+    <!-- Manifest PWA -->
+    <link rel="manifest" href="../manifest.json" />
+
+    <!-- Humans.txt -->
+    <link rel="author" href="../humans.txt" />
 
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -77,7 +84,33 @@
         "datePublished": "2024"
       }
     </script>
-  </head>
+    <!-- Breadcrumb Schema -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+          {
+            "@type": "ListItem",
+            "position": 1,
+            "name": "Accueil",
+            "item": "https://aurel1407.github.io/portfolio/"
+          },
+          {
+            "@type": "ListItem",
+            "position": 2,
+            "name": "Projets",
+            "item": "https://aurel1407.github.io/portfolio/#projects"
+          },
+          {
+            "@type": "ListItem",
+            "position": 3,
+            "name": "Shu-no",
+            "item": "https://aurel1407.github.io/portfolio/projects/shuno.html"
+          }
+        ]
+      }
+    </script>  </head>
 
   <body class="bg-gray-50 font-sans">
     <!-- Navigation -->
