--- a/index.html
+++ b/index.html
@@ -972,6 +972,51 @@
                 </a>
               </div>
             </article>
+
+            <!-- Projet 4 - ClimatServ17 -->
+            <article
+              class="bg-white rounded-2xl overflow-hidden shadow-lg hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 flex flex-col h-full"
+            >
+              <div class="relative overflow-hidden group h-64 flex-shrink-0">
+                <img
+                  src="images/climatserv17-logo.webp"
+                  alt="Logo ClimatServ17 - Application de services climatiques"
+                  class="w-full h-full object-contain bg-gradient-to-br from-slate-700 via-slate-600 to-cyan-700 transition-transform duration-300 group-hover:scale-110 p-8"
+                  loading="lazy"
+                  width="400"
+                  height="300"
+                />
+                <div
+                  class="absolute inset-0 bg-gradient-to-br from-gray-500 to-gray-700 opacity-0 group-hover:opacity-95 transition-opacity duration-300 flex items-center justify-center p-4"
+                  aria-hidden="true"
+                >
+                  <div class="flex flex-col gap-3 w-full max-w-xs">
+                    <div class="bg-green-500/90 text-white px-4 py-2 rounded-xl font-semibold text-center">
+                      <i class="fas fa-check mr-2" aria-hidden="true"></i>En ligne
+                    </div>
+                    <a
+                      href="projects/climatserv17.html"
+                      class="block bg-white/10 backdrop-blur-sm border-2 border-white text-white px-6 py-3 rounded-xl font-semibold hover:bg-white/20 transition-colors focus:outline-none focus:ring-2 focus:ring-white text-center"
+                      aria-label="Voir la page ClimatServ17"
+                    >
+                      <i class="fas fa-info-circle mr-2" aria-hidden="true"></i>Voir le projet
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <div class="p-6 flex flex-col flex-grow">
+                <h3 class="text-xl font-bold text-gray-900 mb-2">ClimatServ17 - Services Climatiques</h3>
+                <p class="text-gray-600 mb-4 flex-grow">Application Next.js pour gérer interventions et contrats de maintenance en climatisation (dépannage, entretien, PAC).</p>
+                <div class="flex flex-wrap gap-2 mb-4">
+                  <span class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm font-medium">Next.js</span>
+                  <span class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm font-medium">TypeScript</span>
+                  <span class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm font-medium">Tailwind CSS</span>
+                </div>
+                <a href="projects/climatserv17.html" class="inline-block text-center bg-gray-800 text-white px-6 py-3 rounded-xl font-semibold hover:bg-gray-700 transition-colors focus:outline-none focus:ring-2 focus:ring-gray-500">
+                  <i class="fas fa-info-circle mr-2" aria-hidden="true"></i>Voir les détails
+                </a>
+              </div>
+            </article>
           </div>
         </div>
       </section>
