feat: ajout compétences Next.js, Nodemailer, Netlify + badge collaboration + compteur projets + centrage carte ClimatServ17

--- a/projects/climatserv17.html
+++ b/projects/climatserv17.html
@@ -56,6 +56,7 @@
         <div class="flex flex-wrap justify-center gap-3">
           <span class="px-4 py-2 bg-green-500/90 text-white rounded-xl font-semibold"><i class="fas fa-check-circle mr-2"></i>En ligne</span>
           <span class="px-4 py-2 bg-gray-700 text-white rounded-xl"><i class="fas fa-calendar mr-2"></i>2026</span>
+          <span class="px-4 py-2 bg-blue-600 text-white rounded-xl"><i class="fas fa-users mr-2"></i>Travail en collaboration</span>
         </div>
       </div>
     </section>
