--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
                 <div
                   class="text-center p-4 bg-white/10 backdrop-blur-sm border border-white/20 rounded-xl hover:bg-white/15 transition-all"
                 >
-                  <div class="text-3xl font-bold text-gray-400 mb-2">3+</div>
+                  <div class="text-3xl font-bold text-gray-400 mb-2">4+</div>
                   <div class="text-gray-300">Projets réalisés</div>
                 </div>
               </div>
@@ -560,6 +560,18 @@
                 </div>
                 <div class="skill-item">
                   <div class="flex justify-between mb-2">
+                    <span class="text-white font-medium">Next.js</span>
+                    <span class="text-gray-300">70%</span>
+                  </div>
+                  <div class="w-full bg-white/20 rounded-full h-2">
+                    <div
+                      class="bg-gradient-to-r from-gray-300 to-gray-400 h-2 rounded-full shadow-lg shadow-gray-400/50"
+                      style="width: 70%"
+                    ></div>
+                  </div>
+                </div>
+                <div class="skill-item">
+                  <div class="flex justify-between mb-2">
                     <span class="text-white font-medium">TypeScript</span>
                     <span class="text-gray-300">65%</span>
                   </div>
@@ -648,6 +660,18 @@
                 </div>
                 <div class="skill-item">
                   <div class="flex justify-between mb-2">
+                    <span class="text-white font-medium">Nodemailer</span>
+                    <span class="text-gray-300">65%</span>
+                  </div>
+                  <div class="w-full bg-white/20 rounded-full h-2">
+                    <div
+                      class="bg-gradient-to-r from-gray-300 to-gray-400 h-2 rounded-full shadow-lg shadow-gray-400/50"
+                      style="width: 65%"
+                    ></div>
+                  </div>
+                </div>
+                <div class="skill-item">
+                  <div class="flex justify-between mb-2">
                     <span class="text-white font-medium">Docker</span>
                     <span class="text-gray-300">55%</span>
                   </div>
@@ -695,6 +719,18 @@
                     <div
                       class="bg-gradient-to-r from-gray-300 to-gray-400 h-2 rounded-full shadow-lg shadow-gray-400/50"
                       style="width: 70%"
+                    ></div>
+                  </div>
+                </div>
+                <div class="skill-item">
+                  <div class="flex justify-between mb-2">
+                    <span class="text-white font-medium">Netlify</span>
+                    <span class="text-gray-300">75%</span>
+                  </div>
+                  <div class="w-full bg-white/20 rounded-full h-2">
+                    <div
+                      class="bg-gradient-to-r from-gray-300 to-gray-400 h-2 rounded-full shadow-lg shadow-gray-400/50"
+                      style="width: 75%"
                     ></div>
                   </div>
                 </div>
@@ -975,7 +1011,7 @@
 
             <!-- Projet 4 - ClimatServ17 -->
             <article
-              class="bg-white rounded-2xl overflow-hidden shadow-lg hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 flex flex-col h-full"
+              class="bg-white rounded-2xl overflow-hidden shadow-lg hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 flex flex-col h-full lg:col-start-2"
             >
               <div class="relative overflow-hidden group h-64 flex-shrink-0">
                 <img
